[package]
name = "matrix_webhook"
version = "0.1.0"
edition = "2021"
authors = ["Chikage <chikage@939.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
matrix-sdk = { version = "0.6.2", features = ["markdown"] }
axum = "0.6.20"
tokio = { version = "1.12.0", features = ["full"] }
url = "2.4.1"
clap = { version = "4.4.6", features = ["env", "derive"] }

serde = { version = "1.0.130", features = ["derive"] }


env_logger = "0.10.0"
log = "0.4.20"

tower-http = { version = "0.4.4", features = ["auth"] }
